gm: add drawPatch to GmCanvas + migrate 5 patch GMs (#1979)
* gm: add drawPatch to GmCanvas + migrate 5 patch GMs

* gm: add generateSkiaRendersFor Gradle task